--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-   
+
     background-color: rgb(178, 214, 245);
 }
 
@@ -57,16 +57,111 @@ nav {
     text-decoration: underline;
     font-size: 18px;
     transition: 1s;
-   border-radius: 30px;
-}
-
-.slider {
-    background-image: url(selection/venedik.jpg);
-    width: 980px;
-    height: 250px;
     border-radius: 30px;
 }
-footer{
+
+/* menü bölümü */
+
+.slider {
+    max-width: 100%;
+    height: auto;
+    vertical-align: top;
     margin-top: 30px;
+
+
+    /* slider 1. bölüm start */
+}
+
+.slidersol {
+    width: 50%;
+    height: auto;
+    float: left;
+    padding: 70px 30px;
+
+}
+
+.slidersol h3 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-weight: bold;
+
+}
+
+.slidersol p {
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+.slider button {
+    background-color: #687177;
+    width: 90px;
+    height: 50px;
+    border-radius: 1rem;
+    margin: 0px 175px;
+}
+
+.slider button a {
+    text-decoration: none;
+    color: #0f0599;
+    font-weight: bold;
+}
+
+.slidersag {
+
+    width: 50%;
+    float: left;
+
+}
+
+.slidersag img {
+    width: 100%;
+    padding: 30px;
+}
+
+/* slider 1. bölüm finish */
+
+.slidersol1 {
+    width: 50%;
+    height: auto;
+    float: left;
+    padding: 70px 30px;
+
+}
+
+.slidersol1 h3 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-weight: bold;
+
+}
+
+.slidersol1 p {
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+
+
+.slidersag1 {
+
+    width: 50%;
+    float: left;
+
+}
+
+.slidersag1 img {
+    width: 100%;
+    padding: 30px;
+}
+
+
+
+
+footer {
+    width: 100%;
+    margin-top: 100px;
     text-align: end;
+
 }
