--- a/styleprj.css
+++ b/styleprj.css
@@ -6,13 +6,13 @@
 }
 
 body {
-   
+
     background-color: rgb(178, 214, 245);
-	
+
 }
 
 header {
-    max-width: 980px;
+    max-width: 1300px;
     min-width: 360px;
     border: 1px;
     margin: 0 10%;
@@ -58,37 +58,46 @@ nav {
     text-decoration: underline;
     font-size: 18px;
     transition: 1s;
-   border-radius: 30px;
+    border-radius: 30px;
 }
 
 /* menü bölümü */
 
 .main {
-	max-width: 980px;
-	height: 400px;
-	margin-top: 20px;
-	display: inline;
-	margin-bottom: 50px;
-	
-}
-.main .box1 .box2 .box3 .box4 .box5 .box6{
-	max-width: 195px;
-	height: auto;
+
+    max-width: 1300px;
+    height: 400px;
+    margin-top: 20px;
+    display: flex;
+    margin-bottom: 50px;
 
 }
 
-img{
+.main .box1 .box2 .box3 .box4 .box5 .box6 {
+    width: 100%;
+    height: auto;
+
+}
+
+a img:hover {
+    width: 200px;
+    height: 245px;
+    transition: 1s;
+
+}
+
+img {
     width: 150px;
     height: 195px;
-	margin-right: 30px;
-	margin-top: 100px;
-   
+    margin-right: 30px;
+    margin-top: 100px;
+
 }
 
 
 
 
-footer{
+footer {
     margin-top: 30px;
     text-align: end;
 }
