--- a/stylehk.css
+++ b/stylehk.css
@@ -70,3 +70,21 @@ footer{
     margin-top: 30px;
     text-align: end;
 }
+.slider h1{
+    text-align: center;
+    padding-top: 100px;
+    color: #fff;
+    font-weight: bold;
+}
+ .content{
+    margin-top: 30px;
+    width: 100%;
+ }
+ .content p{
+    margin: 5px auto;
+    text-align: justify;
+ }
+ .content h6{
+    font-size: 20px;
+    margin: 10px auto;
+ }
